--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   background-color: rgb(50, 167, 145);
   align-items: center;
   justify-content: space-between;
+  color: white;
 }
 
 .trybewarts-login {
@@ -21,6 +22,24 @@
   align-items: center;
 }
 
-.header img {
+.trybewarts-header-logo {
   max-width: 150px;
+  margin: 10px;
+}
+
+#trybewarts-header-title {
+  font-size: 50px;
+  text-transform: uppercase;
+}
+
+main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+
+#evaluation-form {
+  display: flex;
+  width: 675px;
+  flex-direction: column;
 }
