--- a/style.css
+++ b/style.css
@@ -68,3 +68,29 @@ main {
   color: rgb(50, 167, 145);
   cursor: pointer;
 }
+
+#evaluation-form {
+  display: flex;
+}
+
+#trybewarts-forms-logo {
+  display: flex;
+  height: 500px;
+  width: 500px;
+  margin-top: 100px;
+  margin-left: 900px;
+  /* align-items: flex-end; nada funciona pra colocar a direita*/
+}
+
+.name-container {
+  border: 2px solid red;
+  
+}
+
+#evaluation-form {
+  border: 2px solid green;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  height: 400px;
+}
