--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ main {
   width: 100%;
   height: 100vh;
   display: flex;
+  border: 2px solid brown;
+  flex-direction: row;
 }
 
 #evaluation-form {
@@ -42,6 +44,7 @@ main {
   width: 675px;
   flex-direction: column;
   border: 2px solid green;
+  margin-top: 30px;
 }
 
 #login-email {
@@ -75,13 +78,24 @@ main {
   display: flex;
   height: 500px;
   width: 500px;
-  margin-top: 100px;
-  margin-left: 900px;
-  /* align-items: flex-end; nada funciona pra colocar a direita*/
+  margin-top: 150px;
+  margin-left: 200px;
 }
 
 .name-container {
   border: 2px solid red;
-  
+  display: flex;
 }
 
+#main-tag {
+  display: flex;
+  margin-bottom: 800px;
+}
+
+.stack-family {
+  display: flex;;
+  flex-direction: row;
+  border: 2px solid blue;
+  margin-right: 625px;
+  /* align-items: flex-start; não alinha */
+}
