--- a/style.css
+++ b/style.css
@@ -93,10 +93,10 @@ main {
   width: 800px;
 }
 
+/* align-items: flex-start; não alinha */
 .stack-family {
-  display: flex;;
+  display: flex;
   flex-direction: row;
   border: 2px solid blue;
   margin-right: 625px;
-  /* align-items: flex-start; não alinha */
 }
